--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,9 @@ site_description: Help funzioni calcolatore di campi di QGIS
 site_author: by OpenDataSicilia.it
 
 ## Repository
-repo_name: OpenDataSicilia/HfcQGIS
-repo_url: https://github.com/opendatasicilia/HfcQGIS-md
-edit_uri: edit/main/docs/ #disables edit button
+# repo_name: OpenDataSicilia/HfcQGIS
+# repo_url: https://github.com/opendatasicilia/HfcQGIS-md
+# edit_uri: edit/main/docs/ #disables edit button
 
 # Copyright
 copyright: <a href="https://hfcqgis.opendatasicilia.it/privacy/" title="Informativa privacy estesa" target="_parent">Privacy</a> | <a href="https://hfcqgis.opendatasicilia.it/LICENSE_my/" title="Licenza" target="_parent" class="link-dark text-decoration-none">Licenza</a>
