--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ theme:
     - navigation.top
     - navigation.instant
     - navigation.tabs
+    - toc.integrate
     - search.suggest
     - search.highlight
     - search.share
